bad/while_cond_null.example_compiler_output
ERROR
[1mbad/while_cond_null.lat:3:8: [1;31merror: [0;1mwhile condition has to be of type `boolean`, not `null`[m
	while(null) {}
	      [1;32m^[m
